@@ -1,3 +1,7 @@
+2004-08-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* Spellbook_gump.cc: use real infinity symbol in SI
+	* Spellbook_gump.cc: show infinity (in SI) or 99 (in BG) in wizard mode
+
 2004-07-11    <jeff@mini.nerble.net>
 
 	* actors.cc,combat.cc,etc.:  Support for 'charmed' flag.
